# cargo-edit-locally

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: main.rs
tests/: log.rs
