[package]
name = "cargo-edit-locally"
version = "0.1.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["subcommand"]
repository = "https://github.com/alexcrichton/cargo-edit-locally"
description = """
A Cargo subcommand to edit dependencies locally via `[replace]`
"""
edition = "2018"

[dependencies]
anyhow = "1"
cargo = "0.56.0"
cargo-util = "0.1"
curl = "0.4.26"
docopt = "1.1.0"
env_logger = { version = "0.9", default-features = false }
git2 = "0.13"
pathdiff = "0.2"
serde = { version = "1.0.104", features = ['derive'] }
serde_json = "1.0.48"
toml = "0.5.6"
url = "*"
openssl = { version = '0.10.28', optional = true }

[features]
vendored-openssl = ['openssl/vendored']
